--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,33 @@
     box-sizing: border-box;
 }
 
+/* Generics */
+
+body{
+    background-color: #000000;
+    color: white;
+}
+
+/* Utility */
+
+.bg-gray{
+    background-color: #4A4A4A;
+}
+
+
+/* header */
+section.settings{
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.view-setting, .size{
+    padding: 3px;
+    border-radius: 5px;
+    font-size: 15px;
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+/* main section */
