--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,10 @@
 /* Generics */
 
 body{
-    background-color: #000000;
+    background-color: black;
     color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 100vh;
 }
 
 /* Utility */
@@ -58,7 +59,78 @@ main .windows{
 .windows .image .user{
     font-size: 12px;
     backdrop-filter: blur(50px);
+    padding: 2px;
+}
+
+/* footer */
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom:0;
+    height: 10%;
+    width: 100%;
+}
+
+/* container settings */
+
+/* comunication-settings */
+.comunication-settings{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.comunication-settings .microphone{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.comunication-settings .video{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 
+/* meeting settings */
 
+.meeting-settings{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.meeting-settings > div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.meeting-settings > div:nth-child(4){
+    color: green;
+}
+
+/* end meeting */
+.end-meeting{
+    display: flex;
+    align-items: center;
+    background-color: gray;
+    color: red;
+    text-align: center;
+    padding: 5px;
+    height: 100%;
+    line-height: 100%;
+}
